--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header class="header" data-header>
         <div class="container">
-            <a href="/" class="logo">
+            <a href="index.html" class="logo">
                 <span class="text-primary">Git</span>Jamal
             </a>
             <div class="header-search">
